[gd_scene load_steps=4 format=3 uid="uid://f75cbh2rlsyg"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_mqu3l"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/workinghours_upp.gd" id="2_qr1oi"]
[ext_resource type="Texture2D" uid="uid://d4ly2e61hanqr" path="res://images/UpgradeIcon/upgrades/hours.png" id="3_f23pf"]

[node name="hours_upp" type="TextureRect" groups=["Persist"]]
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
texture = ExtResource("1_mqu3l")
expand_mode = 1
script = ExtResource("2_qr1oi")
title = "Working Hours"
description = "Kobolds will switch between +25 Increase to base Income with no food consumption and +25% to all Income"
cost = 250000
tier = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_f23pf")

[node name="Offwork" type="Timer" parent="."]
wait_time = 960.0
one_shot = true

[node name="Onwork" type="Timer" parent="."]
wait_time = 480.0
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Offwork" to="." method="_off_work_timer"]
[connection signal="timeout" from="Onwork" to="." method="_on_work_timer"]
